syntax = "proto3";

package bproxy;

option go_package = "github.com/bproxy/bproxy/proto";

enum MessageType {
  HEARTBEAT = 0;
  COMMAND = 1;
  DATA = 2;
  REGISTER = 3;
  CONNECT = 4;
  RELAY = 5;
}

message Message {
  MessageType type = 1;
  string session_id = 2;
  bytes payload = 3;
  string source_id = 4;
  string target_id = 5;
  int64 timestamp = 6;
}

message RegisterPayload {
  string agent_id = 1;
  string hostname = 2;
  repeated string local_ips = 3;
  string os = 4;
  string arch = 5;
  string parent_id = 6;
}

message HeartbeatPayload {
  string agent_id = 1;
  int64 timestamp = 2;
}

message CommandPayload {
  string command = 1;
  repeated string args = 2;
  map<string, string> env = 3;
}

message ConnectPayload {
  string target_agent_id = 1;
  string target_address = 2;
  int32 target_port = 3;
}

message DataPayload {
  bytes data = 1;
  int32 sequence = 2;
}